# mcp-windows

./: README.md  pyproject.toml
src/mcp_windows/: __init__.py  audio.py  keyboard.py  main.py
